added simple fizzbuz program as a block.  Todo: implement fizzbuzz algorithm

--- a/blocks/gordonb/fizzbuzz/CMakeLists.txt
+++ b/blocks/gordonb/fizzbuzz/CMakeLists.txt
@@ -1,5 +1,10 @@
+# Including tools.cmake from biicode/cmake user block
+INCLUDE(biicode/cmake/tools)
 
 ADD_BII_TARGETS()
+
+# Calling specific macro to activate c++11 flags
+ACTIVATE_CPP11(INTERFACE ${BII_BLOCK_TARGET})
 
 ###############################################################################
 #      HELP                                                                   #
