added unit tests for required behavior of fizzbuzz

--- a/blocks/gordonb/fizzbuzz/biicode.conf
+++ b/blocks/gordonb/fizzbuzz/biicode.conf
@@ -2,6 +2,7 @@
 
 [requirements]
 	 biicode/cmake: 3
+     google/gtest: 10
 
 [parent]
     # The parent version of this block. Must match folder name. E.g.
@@ -27,6 +28,7 @@
 [tests]
     # Manual adjust of files that define a CTest test
     # test/* pattern to evaluate this test/ folder sources like tests
+    test_suites/fizzbuzz_test.cpp
 
 [hooks]
     # These are defined equal to [dependencies],files names matching bii*stage*hook.py
@@ -35,7 +37,8 @@
 
 [includes]
     # Mapping of include patterns to external blocks
-    # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
+    # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h    
+    gtest/*.h: google/gtest/include
 
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
